# NetworkXpydata

./: NetworkX_intro.ipynb  README.md  house.csv  house.edgelist  pyproject.toml  requirements.in  requirements.txt  slides-draft.ipynb  slides-draft.slides.html  slides.ipynb  slides.slides.html  to_pdf_command.txt
