[tool.poetry]
name = "networkxpydata"
version = "0.1.0"
description = ""
authors = ["crsqq"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
notebook = "^6.3.0"
networkx = "^2.5.1"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
pandas = "^1.2.4"
scipy = "^1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
